[package]
name = "subeth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_json/std",
    "sp-core/std",
    "parity-scale-codec/std",
]

[dependencies]
jsonrpsee = { version = "^0.24", features = ["async-client", "jsonrpsee-types", "server", "jsonrpsee-proc-macros", "macros"]}
log = { version = "0.4.14", default-features = false }
parity-scale-codec = { version = "3.1.0", default-features = false }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.79", default-features = false }
sp-core = { version = "32.0.0", default-features = false }
tokio = { version = "1", features = ["rt", "macros", "time", "rt-multi-thread"] }

# alloy dependencies
alloy-rpc-types-eth = "0.11.1"
subxt = { version = "0.39.0", features = ["unstable-light-client"] }
alloy-consensus = "0.11.1"
clap = { version = "4.5.30", features = ["derive"] }
alloy-primitives = "0.8.21"
sp-io = "39.0.0"
frame-support = "39.0.0"
