[workspace]
resolver = "2"
members = ["adapter"]

# Exclude the chain directory as it's its own workspace
exclude = ["chain"]

# Default members - what gets built when you run `cargo build` at the root
default-members = ["adapter"]

[workspace.package]
edition = "2021"
license = "MIT-0"

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
