[package]
name = "subeth-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.1.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
sp-core = { version = "35.0.0", default-features = false }
alloy-primitives = { version = "0.8.21", default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "alloy-primitives/std",
]
