[package]
name = "pallet-evm-adapter"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "MIT-0"
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
polkadot-sdk = { workspace = true, features = [
	"pallet-balances",
	"runtime",
] }

[features]
default = ["std"]
std = [
	"codec/std",
	"polkadot-sdk/std",
	"scale-info/std",
]

try-runtime = [
	"polkadot-sdk/try-runtime",
]
